2012-07-20 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/db/mysql.php
	 include/functions_groups.php
	 include/functions_agents.php: Added functions to count global 
	 elements (groups or agents), counting disabled elements too. 

2012-07-20  Hirofumi Kosaka  <kosaka@rworks.jp>

        * index.php: bug fix: 'Enforce https' led to wrong URL to
	cause "error 310: too many redirects".
	* include/functions_ui.php: bug fix: ui_get_full_url() had
	returned URL with unnecessary wrong port specifier ":80",
	when switching 'http' to 'https' by 'enforce https'.

2012-07-19  Sergio Martin <sergio.martin@artica.es>

	* godmode/modules/manage_network_components_form.php
	godmode/modules/manage_network_components_form_plugin.php: Fix some
	bugs as allow delete first macro, show at least one macro, etc.

2012-07-19  Sergio Martin <sergio.martin@artica.es>

	* godmode/modules/manage_network_components_form.php
	godmode/modules/manage_network_components_form_plugin.php: Add 
	first version of dynamic macros in network components of type
	plug-in

2012-07-19  Sergio Martin <sergio.martin@artica.es>

	* pandoradb.sql
	pandoradb.postgreSQL.sql
	pandoradb.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql
	godmode/modules/manage_network_components_form.php
	godmode/modules/manage_network_components.php
	godmode/modules/manage_network_components_form_plugin.php: Added
	to plugin components the macro fields and modify database schemma

2012-07-19 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/javascript/pandora.js: fixed the doc header for the
	function "agent_autocomplete" that was very wrong, and now in this
	function when call with the id_server_name equal to false, the
	function doesn't save the id_server in hidden input.
	
	* include/functions_agents.php: added function
	"agents_check_agent_exists" that check if any agent exists into the